src/test/ui/async-await/await-keyword/2018-edition-error-in-non-macro-position.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:7:13
   |
LL |     pub mod await {
   |             ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     pub mod r#await {
   |             ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:8:20
   |
LL |         pub struct await;
   |                    ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |         pub struct r#await;
   |                    ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:11:22
   |
LL | use self::outer_mod::await::await;
   |                      ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | use self::outer_mod::r#await::await;
   |                      ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:11:29
   |
LL | use self::outer_mod::await::await;
   |                             ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | use self::outer_mod::await::r#await;
   |                             ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:14:14
   |
LL | struct Foo { await: () }
   |              ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | struct Foo { r#await: () }
   |              ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:17:15
   |
LL | impl Foo { fn await() {} }
   |               ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | impl Foo { fn r#await() {} }
   |               ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:20:14
   |
LL | macro_rules! await {
   |              ^^^^^ expected identifier, found reserved keyword
=======
error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:6:13
   |
LL |     pub mod await {
   |             ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     pub mod r#await {
   |             ^^^^^^^

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:7:20
   |
LL |         pub struct await;
   |                    ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |         pub struct r#await;
   |                    ^^^^^^^

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:10:22
   |
LL | use self::outer_mod::await::await;
   |                      ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | use self::outer_mod::r#await::await;
   |                      ^^^^^^^

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:10:29
   |
LL | use self::outer_mod::await::await;
   |                             ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | use self::outer_mod::await::r#await;
   |                             ^^^^^^^

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:13:14
   |
LL | struct Foo { await: () }
   |              ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | struct Foo { r#await: () }
   |              ^^^^^^^

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:16:15
   |
LL | impl Foo { fn await() {} }
   |               ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | impl Foo { fn r#await() {} }
   |               ^^^^^^^

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error-in-non-macro-position.rs:19:14
   |
LL | macro_rules! await {
   |              ^^^^^ expected identifier, found keyword
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
help: you can escape reserved keywords to use them as identifiers
   |
LL | macro_rules! r#await {
   |              ^^^^^^^

error: aborting due to 7 previous errors

